Bug 39876. QI() for nsIXULContent rather than checking the element's namespace. Who knows, some day HTML might support nsIXULContent ;-). r=rjc